bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: week-17
    labels:
        com.docker.compose.project: week-17
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: week-17
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: week-17
                com.docker.compose.service: app
                com.docker.compose.network.shipments-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: shipments-svc-s01
                  image: week-17-app
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['python -c import urllib.request; urllib.request.urlopen(''http://localhost:8130/health'')']
                    periodSeconds: 10
                    initialDelaySeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 3
                  ports:
                    - name: app-8130
                      containerPort: 8130
