bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: week-17
    labels:
        com.docker.compose.project: week-17
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: week-17
        com.docker.compose.service: app
    ports:
        - name: app-8130
          port: 8130
          targetPort: app-8130
