bridge/base/gateway-expose.yaml
#! gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: gateway
    namespace: week-17
    labels:
        com.docker.compose.project: week-17
        com.docker.compose.service: gateway
spec:
    selector:
        com.docker.compose.project: week-17
        com.docker.compose.service: gateway
    ports:
        - name: gateway-80
          port: 80
          targetPort: gateway-80
