bridge/base/shipments-network-network-policy.yaml
#! shipments-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: shipments-network-network-policy
    namespace: week-17
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.shipments-network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.shipments-network: "true"
